--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+:root {
+  --color-texto: black;
+  --fondo-resaltado: lightblue;
+  --text-family: "Verdana" , san-serif;
+}
+
+* {
+  font-family: var(--text-family);
+}
+
+/*DATOS PACIENTE*/
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.datos-paciente-container {
+  border: 3px solid black;
+  border-radius: 15px;
+  max-width: 50vw;
+  min-width: 600px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
+  background-color: var(--fondo-resaltado);
 }
 
-.App-link {
-  color: #61dafb;
+.datos-paciente-container span {
+  color: var(--color-texto);
+  font-size: large;
+  font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* EVOLUCIONES ANTERIORES*/
+
+.evoluaciones-container {
+  border: 3px solid black;
+  padding: 20px;
+  list-style-type: none;
+}
+
+.evoluaciones-container li {
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: var(--fondo-resaltado);
+}
+
+.evoluaciones-container li:hover {
+  background-color: lightseagreen;
+}
+
+.evoluaciones-container li span {
+  color: black;
+  font-weight: bolder;
+}
+
+.evoluaciones-container li:last-child {
+  margin-bottom: 0;
 }
