--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,42 @@
   font-family: var(--text-family);
 }
 
-/*DATOS PACIENTE*/
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  width: 100%;
+}
+
+/* GENERICAS */
+
+.col-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 90px;
+}
+
+.App > h1 {
+  margin: 0;
+  padding: 20px;
+  text-align: center;
+}
+
+
+/* DATOS PACIENTE */
 
 .App {
   display: flex;
@@ -40,12 +75,27 @@
 /* EVOLUCIONES ANTERIORES*/
 
 .evoluaciones-container {
-  border: 3px solid black;
-  padding: 20px;
-  list-style-type: none;
+  border-right: 3px solid black;
+  max-width: 30vw;
+  min-width: 400px;
 }
 
-.evoluaciones-container li {
+.evoluaciones-container h2 {
+  margin: 0;
+  text-align: center;
+  padding: 20px;
+}
+
+.evoluaciones-container ol {
+  margin: 0;
+  list-style-type: none;
+  padding: 20px 10px;
+  max-height: 85vh;
+  overflow-y: auto;
+  border-bottom: 1px solid black;
+}
+
+.evoluaciones-container ol li {
   margin-bottom: 10px;
   border: 1px solid black;
   border-radius: 15px;
@@ -54,15 +104,15 @@
   background-color: var(--fondo-resaltado);
 }
 
-.evoluaciones-container li:hover {
+.evoluaciones-container ol li:hover {
   background-color: lightseagreen;
 }
 
-.evoluaciones-container li span {
+.evoluaciones-container ol li span {
   color: black;
   font-weight: bolder;
 }
 
-.evoluaciones-container li:last-child {
+.evoluaciones-container ol li:last-child {
   margin-bottom: 0;
 }
