--- a/src/App.css
+++ b/src/App.css
@@ -33,15 +33,14 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 90px;
+  align-items: center;
+  height: 100%;
 }
 
 main > h1 {
   margin: 0;
   padding: 20px 0;
   font-size: 40px;
-
-
 }
 
 
@@ -78,7 +77,8 @@ main > h1 {
 
 .evoluaciones-container {
   border-right: 3px solid black;
-  max-width: 30vw;
+  max-width: 25vw;
+  width: 100%;
   min-width: 400px;
 }
 
@@ -121,3 +121,11 @@ main > h1 {
 
 /* ETAPAS EVOLUCION */
 
+.etapas-container {
+  padding: 30px;
+  height: 50vh;
+  border: 3px solid black;
+  border-radius: 30px;
+  min-width: 900px;
+  margin-top: 40px;
+}
