--- a/src/App.css
+++ b/src/App.css
@@ -122,10 +122,49 @@ main > h1 {
 /* ETAPAS EVOLUCION */
 
 .etapas-container {
+  display: flex;
+  flex-direction: column;
   padding: 30px;
-  height: 50vh;
+  height: 100%;
   border: 3px solid black;
-  border-radius: 30px;
-  min-width: 900px;
+  border-radius: 40px;
+  max-width: 1200px;
+  width: 100%;
   margin-top: 40px;
+  justify-content: flex-start;
+}
+
+.btn, .btn-central {
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: black;
+  cursor: pointer;
+  color: white;
+  font-size: 30px;
+  border: 1px solid black;
+}
+
+.btn {
+  border-radius: 50%;
+  width: 300px;
+  height: 150px;
+  background-color: darkslategrey;
+}
+
+.btn-central {
+  width: 250px;
+  height: 200px;
+  border-radius: 20%;
+  background-color: green;
+}
+
+.b1, .b2, .b3 {
+  /*border: 1px solid black;*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 30px;
 }
