--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --color-texto: black;
   --fondo-resaltado: lightblue;
-  --text-family: "Verdana" , san-serif;
+  --text-family: "Verdana", san-serif;
 }
 
 * {
@@ -9,7 +9,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -37,19 +38,19 @@ body {
 
 main {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding: 0 2rem;
 }
 
-main > h1 {
+main h1 {
   margin: 0;
   padding: 20px 0;
-  font-size: 40px;
+  font-size: 3rem;
 }
-
 
 /* DATOS PACIENTE */
 
@@ -79,12 +80,21 @@ main > h1 {
   color: var(--color-texto);
   font-size: large;
   font-weight: bolder;
+  font-size: 1.3rem;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 /* EVOLUCIONES ANTERIORES*/
 
 .evoluciones {
-  max-width: 400px;
+  max-width: 500px;
   width: 100%;
   min-width: 300px;
   height: 100%;
@@ -121,7 +131,7 @@ main > h1 {
   padding: 10px;
   max-height: 100%;
   height: 100%;
-  
+
 }
 
 .evoluciones-container ol li {
@@ -131,7 +141,7 @@ main > h1 {
   padding: 1rem;
   cursor: pointer;
   background-color: var(--fondo-resaltado);
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .evoluciones-container ol li:hover {
@@ -147,24 +157,26 @@ main > h1 {
   margin-bottom: 0;
 }
 
-
-
 /* ETAPAS EVOLUCION */
 
 .etapas-container {
   display: flex;
   flex-direction: column;
-  padding: 0 1em;
-  border: 2px solid black;
-  border-radius: 1.25rem;
-  max-width: 1200px;
+/*   border: 2px solid black; */
+  border-radius: 50%;
+  max-width: 900px;
   width: 100%;
-  min-width: 400px;
+  min-width: 300px;
+  min-height: 300px;
+  max-height: 600px;
+  height: 100%;
   margin-top: 40px;
-  justify-content: flex-start;
+  justify-content: center;
+  background-color: lightsteelblue;
 }
 
-.etapa, .btn-central {
+.etapa,
+.btn-central {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
@@ -177,39 +189,47 @@ main > h1 {
 }
 
 .etapa {
+  width: 15.6rem;
+  height: 7.25rem;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
-  max-width: 200px;
-  min-width: 150px;
-  width: 100%;
-  max-height: 200px;
-  min-height: 100px;
-  height: 100%;
   background-color: darkslategrey;
 }
 
 .btn-central {
-  max-width: 200px;
-  min-width: 150px;
-  width: 100%;
-  max-height: 250px;
-  min-height: 150px;
-  height: 100%;
-  border-radius: 2rem;
+  width: 14rem;
+  height: 9rem;
+  border-radius: 50%;
+  line-height: 2rem;
+  margin: 2.5rem;
+}
+
+.btn-confirmar {
+  background-color: orange;
+}
+
+.btn-generar {
   background-color: green;
 }
 
-.top, .mid, .bottom {
-  /*border: 1px solid black;*/
+.icono-paciente {
+  background-color: gray;
+}
+
+.top,
+.mid,
+.bottom {
+  /*  border: 1px solid black; */
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
-.top, .bottom{
-  padding: 1rem 0;
+.bottom button {
+  margin: 0 2.5rem;
 }
-
 
 .check {
   background-color: green;
