--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,7 @@ main h1 {
 .evoluciones-container::-webkit-scrollbar-thumb {
   background-color: var(--fondo-resaltado);
   border-radius: 1rem;
+  opacity: 0;
 }
 
 .evoluciones h2 {
@@ -176,7 +177,6 @@ main h1 {
 .etapas-container {
   display: flex;
   flex-direction: column;
-  /*   border: 2px solid black; */
   max-width: 900px;
   width: 100%;
   min-width: 300px;
@@ -267,7 +267,6 @@ main h1 {
 .top,
 .mid,
 .bottom {
-  /*  border: 1px solid black; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -284,12 +283,4 @@ main h1 {
   position: relative;
   bottom: 35%;
   left: 70%;
-}
-
-@media only screen and (max-width: 1024px) {
-
-  html {
-    font-size: 14px;
-  }
-
 }
