--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,6 @@ body {
   background-color: #fbfcfd;
 }
 
-body {
-  border: 1px solid black;
-}
-
 #root {
   width: 100%;
   height: 100%;
@@ -197,7 +193,8 @@ main h1 {
   cursor: pointer;
   color: white;
   font-size: 1.25rem;
-  border: 1px solid black;
+  border: none;
+  /* border: 1px solid black; */
 }
 
 .etapa {
@@ -281,10 +278,6 @@ main h1 {
 
 .bottom button {
   margin: 0 2.5rem;
-}
-
-{
-
 }
 
 .check {
