--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,7 @@ main h1 {
   overflow-y: auto;
   max-height: 90%;
   height: 100%;
+  border-right: 2px solid var(--fondo-resaltado);
 }
 
 .evoluciones-container::-webkit-scrollbar {
@@ -137,9 +138,10 @@ main h1 {
   margin: 0;
   list-style-type: none;
   padding: 10px;
-  max-height: 100%;
+  min-height: 100%;
   height: 100%;
   font-style: italic;
+
 }
 
 .evoluciones-container ol li {
@@ -167,6 +169,17 @@ main h1 {
 
 .evoluciones-container ol li:last-child {
   margin-bottom: 0;
+}
+
+.aviso-sin-evoluciones {
+  background-color: var(--color-fondo);
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin: auto;
+  margin-top: 2rem;
+
 }
 
 /* ETAPAS EVOLUCION */
@@ -259,9 +272,9 @@ main h1 {
 }
 
 .mid img {
-  width: 14rem;
-  height: 14rem;
-  margin: 2.5rem;
+  width: 9rem;
+  height: 9rem;
+  margin: 2.5rem 5rem;
   user-select: none; 
   -webkit-user-drag: none; 
   -moz-user-select: none; 
