--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
   --evaluacion: #577590;
   --ejecucion: #F9844A;
   --diagnostico: #90BE6D;
-  --etapa-no-disponible: gray;
+  --confirmado: #43AA8B;
   --color-fondo: #fbfcfd;
+  --warning: #F9C74F;
 }
 
 * {
@@ -99,9 +100,9 @@ main h1 {
 /* EVOLUCIONES ANTERIORES*/
 
 .evoluciones {
-  max-width: 500px;
+  max-width: 30rem;
   width: 100%;
-  min-width: 300px;
+  min-width: 15rem;
   height: 100%;
   max-height: 100vh;
 }
@@ -129,15 +130,15 @@ main h1 {
   padding: 0.9rem;
   max-height: 20%;
   background-color: var(--fondo-resaltado);
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.52);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.52);
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.52);
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.52);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.52);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.52);
 }
 
 .evoluciones-container ol {
   margin: 0;
   list-style-type: none;
-  padding: 10px;
+  padding: 0.8rem;
   min-height: 100%;
   height: 100%;
   font-style: italic;
@@ -152,9 +153,9 @@ main h1 {
   cursor: pointer;
   background-color: var(--fondo-resaltado);
   font-size: 1rem;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.52);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.52);
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.52);
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.52);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.52);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.52);
 }
 
 .evoluciones-container ol li:hover {
@@ -187,13 +188,13 @@ main h1 {
 .etapas-container {
   display: flex;
   flex-direction: column;
-  max-width: 900px;
+  max-width: 60rem;
   width: 100%;
-  min-width: 300px;
-  min-height: 300px;
-  max-height: 600px;
+  min-width: 16rem;
+  min-height: 16rem;
+  max-height: 32rem;
   height: 100%;
-  margin-top: 40px;
+  margin: 2.5rem;
   justify-content: center;
 }
 
@@ -257,11 +258,11 @@ main h1 {
   margin: 2.5rem;
 }
 
-.btn-confirmar {
-  background-color: #F9C74F;
+.btn-confirmar, .warning {
+  background-color: var(--warning);
 }
 
-.btn-generar {
+.btn-generar, .confirm {
   background-color: #43AA8B;
 }
 
@@ -275,9 +276,9 @@ main h1 {
   width: 9rem;
   height: 9rem;
   margin: 2.5rem 5rem;
-  user-select: none; 
-  -webkit-user-drag: none; 
-  -moz-user-select: none; 
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
   pointer-events: none;
 }
 
@@ -294,10 +295,71 @@ main h1 {
   margin: 0 2.5rem;
 }
 
-.check {
-  background-color: #43AA8B;
-  border-radius: 50%;
+.contexto-relativo-cartel-aviso {
+  width: 32rem;
+  height: 5rem;
+  text-align: center;
+  line-height: 2rem;
+  font-size: 1.1rem;
   position: relative;
-  bottom: 35%;
-  left: 70%;
+
+}
+
+.completada {
+  background-color: var(--confirmado);
+}
+
+.completada:hover {
+  background-color: var(--warning);
+}
+
+.aviso-modificacion {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.cerrar-cartel {
+  position: absolute;
+  border-radius: 50%;
+  left: 30.5rem;
+  top: -10px;
+  width: 1.5rem;
+  height: 1.5rem;
+  z-index: 2;
+  border: none;
+  cursor: pointer;
+}
+
+.warning + .cerrar-cartel:hover {
+  background-color: var(--warning);
+  transition: background-color 100ms linear;
+}
+
+.confirm + .cerrar-cartel:hover {
+  background-color: var(--confirmado);
+  transition: background-color 100ms linear;
+  color: white
+}
+
+@media only screen and (max-width: 1360px) {
+
+  html {
+    font-size: 14px;
+  }
+  main {
+    padding: 0;
+  }
+
+  .datos-paciente-container {
+    max-width: 60vw;
+  }
 }
