--- a/src/components/buscar-paciente/busqueda-paciente.css
+++ b/src/components/buscar-paciente/busqueda-paciente.css
@@ -13,6 +13,7 @@
 
 h1 {
     background-color: var(--fondo-resaltado);
+    color: var(--color-fondo);
     padding: 1rem;
     border-radius: 1rem;
 }
@@ -70,3 +71,26 @@ h1 {
     border-bottom: 0.6rem solid transparent;
     border-left: 0.6rem solid var(--color-fondo);
 }
+
+.overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 3rem;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    background-color: aliceblue;
+    border-radius: 1rem;
+    padding: 2rem;
+    width: 25rem;
+    height: 25rem;
+}
+
