--- a/src/components/etapas/etapas.css
+++ b/src/components/etapas/etapas.css
@@ -97,3 +97,44 @@
     top: 5px;
     text-align: center;
 }
+
+.selected {
+    background-color: blue;
+}
+
+.item-necesidad input {
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    outline: none;
+    border: none;
+    color: whitesmoke;
+    font-size: 1.5rem;
+}
+
+.item-necesidad input::placeholder {
+    color: whitesmoke;
+    font-style: italic;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+.item-necesidad button {
+    background-color: inherit;
+    outline: none;
+    border: none;
+    font-size: 1.5rem;
+    color: whitesmoke;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.item-necesidad button:hover {
+    background-color: aqua;
+}
