--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,23 +1,20 @@
 .overlay {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 3rem;
     z-index: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: inline-flex;
 }
 
 .modal {
     background-color: aliceblue;
     border-radius: 1rem;
     padding: 2rem;
-    width: 40rem;
-    height: 40rem;
 }
 
 .evo-anterior {
