--- a/src/components/etapas/etapas.css
+++ b/src/components/etapas/etapas.css
@@ -47,16 +47,17 @@
 }
 
 .necesidades-container {
-    width: 100%;
     height: 100%;
     max-height: 90rem;
     list-style-type: none;
-    padding: 0 1rem;
+    padding: 0 3rem;
     margin: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.5rem 2rem;
 }
 
 .item-necesidad {
@@ -64,7 +65,7 @@
     padding: 1rem 2rem;
     border-radius: 0.5rem;
     margin-bottom: 0.5rem;
-    max-width: 50rem;
+    max-width: 33rem;
     width: 100%;
     color: white;
     font-size: 1.5rem;
