--- a/src/components/etapas/Planeacion/Draggable/dragdropstyles.css
+++ b/src/components/etapas/Planeacion/Draggable/dragdropstyles.css
@@ -4,12 +4,9 @@
     overflow-y: auto;
     width: 100%;
     height: 100%;
-    border: 1px solid gray;
-    background-color: lightgray;
 }
 
 .dragdrop-container::-webkit-scrollbar-thumb {
-    background-color: gray;
     border-radius: 1rem;
     opacity: 0;
 }
@@ -19,9 +16,10 @@
 }
 
 .dragdrop-item {
-    background-color: lightblue;
     padding: 1rem;
-    border-radius: 10px;
     width: 100%;
     margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #4E666E;
+    color: white;
 }
